# smartscore-api

./: .eslintrc.json  .gitignore  LICENSE  Makefile  README.md  lambda_template.yaml  package-lock.json  package.json  pyproject.toml  script.py  template.yaml  tsconfig.json  wrangler.toml
.github/instructions/: adding_route.md.instructions.md
.github/workflows/: deploy.yml
build_scripts/: deploy.sh  package.sh
lib/: backup.csv  data.csv
scripts/: backfill-scored.ts  config.example.ts  copy-collection.ts  delete-game.ts  get-all-players.ts  get-players.ts  get-unscored-dates.ts  health-check.ts  test-hello.ts  upload-players.ts
smartscore_api/: config.py  decorators.py  event_handler.py  service.py
smartscore_api/schemas/: method.py  post_batch.py
smartscore_api/scripts/: change_property_name.py  change_team_name_to_abbrev.py  edit_db.py  get_all_teams.py  sync_mongo_to_local.py
src/: auth.ts  env.d.ts  index.ts  router.ts
src/handlers/: backfill_scored.ts  delete_game.ts  doThing.ts  get_all_players.ts  get_players_for_date.ts  get_unscored_dates.ts  health.ts  hello.ts  index.ts  notFound.ts  upload_players.ts
src/shared/: index.ts  mongodb.ts  validators.ts
src/tests/: auth.test.ts  backfill_scored.test.ts  delete_game.test.ts  get_all_players.test.ts  get_players_for_date.test.ts  get_unscored_dates.test.ts  handlers.test.ts  mongodb.test.ts  router.test.ts  sample.test.ts  upload_players.test.ts  validators.test.ts
